--- a/Touchstone Brother IpP/Touchstone Brother IpP.csproj
+++ b/Touchstone Brother IpP/Touchstone Brother IpP.csproj
@@ -240,6 +240,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Browser.xaml.cs">
+      <DependentUpon>Browser.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Customers.xaml.cs">
       <DependentUpon>Customers.xaml</DependentUpon>
     </Compile>
@@ -248,6 +251,7 @@
     </Compile>
     <Compile Include="Intergrated\BarcodeManagement.cs" />
     <Compile Include="Intergrated\ConnectionManagement.cs" />
+    <Compile Include="Intergrated\Core.cs" />
     <Compile Include="Intergrated\CustomersManagement.cs" />
     <Compile Include="Intergrated\OfflineManagement.cs" />
     <Compile Include="Intergrated\ShortGuid.cs" />
@@ -257,6 +261,7 @@
     <Compile Include="Intergrated\FirebaseManagement.cs" />
     <Compile Include="Intergrated\LocalFilesManagement.cs" />
     <Compile Include="Intergrated\PrintManagement.cs" />
+    <Compile Include="Models\BrowserViewModel.cs" />
     <Compile Include="Models\CustomersPageViewModel.cs" />
     <Compile Include="Models\MainWindowViewModel.cs" />
     <Compile Include="PopDialog.xaml.cs">
@@ -270,6 +275,10 @@
     <Compile Include="Startup.xaml.cs">
       <DependentUpon>Startup.xaml</DependentUpon>
     </Compile>
+    <Page Include="Browser.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Customers.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -315,6 +324,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
